[project]
name = "bgperf2"
description = "Performance measurement tool for BGP implementations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "docker",
  "jinja2",
  "pyyaml",
  "pyroute2",
  "nsenter",
  "netaddr",
  "mako",
  "six",
  "packaging",
  "psutil",
  "matplotlib",
  "numpy",
  "toml",
  "textfsm"
]
dynamic = ["version"]
authors = [
  { name = "NetEngLabs" }
]
license = { text = "Apache-2.0" }
keywords = ["bgp", "performance", "networking"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Networking"
]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }

[dependency-groups]
dev = []
